python-defaults (2.6.6-12) UNRELEASED; urgency=low

  * dh_python2: works with Breaks spanning across multiple physical lines

 -- Piotr Ożarowski <piotr@debian.org>  Tue, 08 Mar 2011 23:55:37 +0100

python-defaults (2.6.6-11) experimental; urgency=low

  * dh_python2 and pycompile: read /usr/share/python/debian_defaults to get
    default Python version and a list of supported Python versions
  * dh_python2:
    - fix parsing .pyinstall files (a space between file name and
      module name is now required)
    - replace a file with a symlink also if there's a matching one in
      pyshared directory already
    - add support for DH_OPTIONS env. variable
    - fix checking shebangs in private directories (executable bit wasn't
      checked correctly)
    - add test4 to test handling private directories
    - make egg-info files/dirs searches case insensitive (closes: #614910)
  * pycompile:
    - --exclude now works with private dirs
    - use /usr/bin/pythonX.Y rather than pythonX.Y (to avoid /usr/local
      interpreters)
  * rewrite dh_python2.1, pycompile.1 and pyclean.1 manpages in ReStructured
    Text, add quick guide for maintainers to dh_python2 manpage

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 28 Feb 2011 20:28:05 +0100

python-defaults (2.6.6-10) experimental; urgency=low

  * dh_python2: fix moving files from old debug locations (due to typo)
  * python-minimal now Breaks python-support << 1.0.12 (Python 2.7 support was
    added in 1.0.12)
  * pycompile: skip dangling symlinks

 -- Piotr Ożarowski <piotr@debian.org>  Mon, 10 Jan 2011 23:05:47 +0100

python-defaults (2.6.6-9) experimental; urgency=low

  * dh_python2: fix a crash in packages with private extension (closes: 607555)
    - test3 added (to test architecture dependent packages)

 -- Piotr Ożarowski <piotr@debian.org>  Sun, 19 Dec 2010 20:27:23 +0100

python-defaults (2.6.6-8) experimental; urgency=low

  * Fix typo in minimum required python version for packages generated with